# flashcard_app

./: .gitignore  README.md  my_import_setting.ipynb  processed_terms.xlsx  pyproject.toml  stream_lit_app.py  word2vec.ipynb
src/flashcard_app/: __init__.py
